<resources>
    <string name="app_name">Hoosh Noosh</string>

    <!-- prefence keys, no translation needed -->
    <string name="pref_commands_mode">pref_commands_mode</string>
    <string name="pref_commands_ending">pref_commands_ending</string>
    <string name="pref_log_timing">pref_log_timing</string>
    <string name="pref_log_direction">pref_log_direction</string>
    <string name="pref_need_clean">pref_need_clean</string>
    <!-- prefence keys, no translation needed -->

    <string name="msg_not_connected">not connected</string>
    <string name="msg_connecting">connecting…</string>
    <string name="msg_connected">connected</string>

    <string name="action_bluetooth">on/off</string>
    <string name="no_bt_support">Your device doesn\'t support bluetooth.</string>
    <string name="empty_device_name">&lt;New device&gt;</string>

    <string name="menu_send">Send log…</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear">Clear history</string>

    <string name="select_device">Select device</string>
    <string name="search_message">Search for devices…</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other devices</string>
    <string name="none_paired">No paired devices</string>
    <string name="none_found">Not found</string>
    <string name="command_hint">Enter command here</string>
    <string name="button_send">Send</string>

    <!-- UI strings -->
    <string name="log_settings_category">Command history:</string>

    <string name="log_time">Time</string>
    <string name="log_time_summary">Show time in log</string>
    <string name="log_direction">Direction</string>
    <string name="log_direction_summary">Show I/O direction in log</string>

    <string name="commands_mode">Input mode:</string>
    <string name="commands_mode_summary">Select input mode</string>
    <string name="commands_ending_summary">Select ending</string>

    <string name="need_clean">Clear previous command</string>
    <string name="need_clean_summary">Cleanup command view after sending</string>
    <string name="dummy">dummy</string>
    <string name="terminal">Terminal</string>
    <string name="registeration">Registration</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="name">Name</string>
    <string name="my_type">My Type</string>
    <string name="general_user">General User</string>
    <string name="body_builder">Body Builder</string>
    <string name="runner">Runner</string>
    <string name="biker">Biker</string>
    <string name="aged">Aged</string>
    <string name="add_new_type">Add New Type</string>
    <string name="mytype_header">Choose your type</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>
    <string name="image">Card Image</string>

    <string name="bodybuilder_detail">Bodybuilders burn 400 cl during their exercise.
    They should at least drink half of a glass water every hour.
    So Hoosh noosh suggest bodybuilders drink a glass of water based on the given program by the bottle application for 2 hours.
    Consuming every kc demands drinking 1 cc water so body can continue its metabolize.</string>
    <string name="biker_detail">Bikers burn 1000 cl during their exercise.
    They should at least drink half of a glass water every hour.
    So Hoosh noosh suggest bikers drink a glass of water based on the given program by the bottle application for 2 hours.
    Consuming every kc demands drinking 1 cc water so body can continue its metabolize.</string>
    <string name="runner_detail">Runners burn 550 cl during their exercise.
    They should at least drink half of a glass water every hour.
    So Hoosh noosh suggest runners drink a glass of water based on the given program by the bottle application for 2 hours.
    Consuming every kc demands drinking 1 cc water so body can continue its metabolize.</string>
    <string name="aged_detail">Since old people’s kidneys are weaker they store more toxin in their cells so it’s important for them to stay hydrated. Experts suggest old people stay hydrated during the day to stay healthy, they need to drink 8 to 10 glasses of water every day. But it’s important for them to drink this amount of water on schedule.
That’s why we decided to make an application to smartly manage this for them.
This type sends notifications every 3 hours and reminds them to drink their glass of water.

In this section if you suffer from a special disease that requires you to drink water - such as kidney problems – your drinking water data will be sent on the web client and then to your doctor.
</string>
    <string name="general_detail">
        It’s important for everyone to stay hydrated during the day. Drinking water helps you to get rid of toxins. But if you drink water on a good plan it can also help you to become healthier.
According to some experiments consuming every k cl demands 1 cc of water.

A normal person consumes 2500 k cl every day so he/she should drink 2500 cc water that equals to 10 glasses.
Hoosh noosh is a smart package that helps people to drink this amount of water on a right schedule.
    </string>

    <string name="culligan_water_link">http://www.culliganwater.com/residential/resources/drinking-water-apps/</string>

    <string name="per_hour">Per Hour</string>
    <string name="cup_of_water">Cup Of Water</string>
    <string name="ibm">IBM</string>
    <string name="temperature">Temp</string>
    <string name="mass_of_water">Mass Of Water</string>
    <string name="heartbeat">Heartbeat</string>
    <string name="register">Register</string>
    <string name="name_is_required">Name is required</string>
    <string name="done">Done</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="your_ibm">Your IBM:</string>
    <string name="overweight">overweight</string>
    <string name="underweight">underweight</string>
    <string name="default_prefs">default_prefs</string>


    <string-array name="sex_array">
        <item>Female</item>
        <item>Male</item>
    </string-array>
</resources>
