<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mpandg.mpandgbluetooth.activity.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/header_image"
            android:layout_height="@dimen/header_image"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/image"
            android:src="@drawable/registration_header"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/text_input_layout_height"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="7"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_weight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_height"
            android:gravity="center"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/weight" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_height"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_height"
            android:gravity="center"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/height" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_age"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_height"
            android:gravity="center"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/age" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>
