<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context="com.mpandg.mpandgbluetooth.activity.MyTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!--header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/header"
                android:layout_width="@dimen/mytype_header_width"
                android:layout_height="@dimen/mytype_header_height"
                android:src="@drawable/my_type"/>

        </LinearLayout>

        <!--row1-->
        <LinearLayout style="@style/RowLayout">

            <LinearLayout style="@style/CardLayout">

                <android.support.v7.widget.CardView
                    style="@style/TypeCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/general_user">

                    <TextView style="@style/CardTitle"
                        android:text="@string/general_user"/>

                    <ImageView
                        style="@style/CardImage"
                        android:src="@drawable/general_user"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout style="@style/CardLayout">

                <android.support.v7.widget.CardView
                    style="@style/TypeCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/body_builder">

                    <TextView style="@style/CardTitle"
                        android:text="@string/body_builder"/>

                    <ImageView style="@style/CardImage"
                        android:src="@drawable/bodybuilder"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <!--row2-->
        <LinearLayout style="@style/RowLayout">

            <LinearLayout style="@style/CardLayout">

                <android.support.v7.widget.CardView
                    style="@style/TypeCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/runner">

                    <TextView style="@style/CardTitle"
                        android:text="@string/runner"/>

                    <ImageView
                        android:id="@+id/runner_icon"
                        style="@style/CardImage"
                        android:src="@drawable/runner"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout style="@style/CardLayout">

                <android.support.v7.widget.CardView
                    style="@style/TypeCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/biker">

                    <TextView style="@style/CardTitle"
                        android:text="@string/biker"/>

                    <ImageView
                        android:id="@+id/biker_icon"
                        style="@style/CardImage"
                        android:src="@drawable/biker"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <!--row3-->
        <LinearLayout style="@style/RowLayout">

            <LinearLayout style="@style/CardLayout">

                <android.support.v7.widget.CardView
                    style="@style/TypeCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/aged">

                    <TextView style="@style/CardTitle"
                        android:text="@string/aged"/>

                    <ImageView
                        android:id="@+id/aged_icon"
                        style="@style/CardImage"
                        android:src="@drawable/aged"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout style="@style/CardLayout">

                <android.support.v7.widget.CardView
                    style="@style/TypeCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/primary">

                    <TextView style="@style/CardTitle"
                        android:text="@string/add_new_type" />

                    <ImageView
                        android:id="@+id/add_new_icon"
                        style="@style/CardImage"
                        android:src="@drawable/ic_add_circle_outline_white_48dp"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
